# functionalcpp

./: CMakeLists.txt
src/: CMakeLists.txt
src/include/functionalcpp/: functional_cpp.hpp
test/: CMakeLists.txt  functional_cpp_test.cpp
